--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 
@@ -27,4 +28,15 @@ img{
     margin-left: 20px;
 
 }
-    
+    /* Main content */
+    .main-page{
+        width: 100%;
+        height: 100vh;
+
+    }
+    .main-page h1{
+        margin-top: 120px;
+        text-align: center;
+        font-size: 50px;
+        font-weight: 700;
+    }
