--- a/style.css
+++ b/style.css
@@ -40,3 +40,11 @@ img{
         font-size: 50px;
         font-weight: 700;
     }
+    .main-page h2{
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 200;
+        margin-top: 20px;
+        font-size: 30px;
+        text-align: center;
+
+    }
