--- a/style.css
+++ b/style.css
@@ -66,3 +66,10 @@ img{
     color: white;
 
 }
+.screen-mockup{
+   height: 100vh;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-top: 100px;
+}
